[package]
name = "agdk-eframe"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.29", features = [ "android-game-activity" ] }
wgpu = "0.16.0"
pollster = "0.2"
egui = "0.26.2"
eframe = { version = "0.26.2", features = [ "wgpu", "android-game-activity" ] }
egui_demo_lib = "0.26.2"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="agdk-eframe"
required-features = [ "desktop" ]


[patch.crates-io]
winit = { git = "https://github.com/lucasmerlin/winit", branch = "hp-fixes-0.29.x" }
egui = { git = "https://github.com/jb55/egui", branch = "ime_0.26.2"}
eframe = { git = "https://github.com/jb55/egui", branch = "ime_0.26.2"}
egui-wgpu = { git = "https://github.com/jb55/egui", branch = "ime_0.26.2"}
egui-winit = { git = "https://github.com/jb55/egui", branch = "ime_0.26.2"}
android-activity = { git = "https://github.com/jb55/android-activity", branch = "ime2"}
